--- a/src/app/components/wish-list-modal/wish-list-modal.css
+++ b/src/app/components/wish-list-modal/wish-list-modal.css
@@ -1,3 +1,4 @@
+
 .primary-text{
   color: var(--primary-text-color);
 }
@@ -13,7 +14,10 @@
     color: var(--primary-text-color);
 
 }
-
+.note-maxLength{
+  color: var(--secondary-text-color);
+  font-size: small;
+}
 /* Apply this to the container or globally */
 .row::-webkit-scrollbar {
   width: 12px;           /* width of vertical scrollbar */
