--- a/src/app/pages/home/components/slider-card/slider-card.html
+++ b/src/app/pages/home/components/slider-card/slider-card.html
@@ -25,7 +25,7 @@
       class="img-fluid rounded-4 ratio-1x1"
     />
     <div
-      class="favorite badge fw-semibold position-absolute top-0 start-0 m-2"
+      class="favorite badge position-absolute top-0 start-0 m-2"
       *ngIf="isFavorite"
     >
       Guest favorite
