--- a/src/app/components/search-filter-group/search-filter-group.css
+++ b/src/app/components/search-filter-group/search-filter-group.css
@@ -299,3 +299,15 @@
 .custom-scroll::-webkit-scrollbar-thumb:hover {
   background-color: #888;
 }
+
+
+
+.airbnb-header.search-bar-sticky.modal-open .search-bar-container {
+  transform: scale(1) !important;
+  -webkit-transform: scale(1) !important;
+  -moz-transform: scale(1) !important;
+  -ms-transform: scale(1) !important;
+  -o-transform: scale(1) !important;
+  margin-top: 0 !important;
+  max-width: none !important;
+}
