--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -1,1 +1,53 @@
-<p>login works!</p>
+<div
+  class="overlay"
+  *ngIf="dialogService.isDialogOpen('login')"
+  (click)="close()"
+>
+  <div class="dialog" (click)="$event.stopPropagation()">
+    <div class="dialog-header">
+      <span *ngIf="user !== ''"
+        >{{ "login.welcome" | translate }} {{ user }}</span
+      >
+      <i class="icon-close" (click)="close()">×</i>
+    </div>
+    <div class="last-info">
+      <img *ngif="img" [src]="img" alt="user-img" />
+      <h1 *ngIf="img!==''">{{ user.charAt(0).toLocaleUpperCase() }}</h1>
+      <p>{{ maskEmail(lastLoginEmail) }}</p>
+    </div>
+    <div class="dialog-content">
+      <form (ngSubmit)="onLogin()" #loginForm="ngForm">
+        <div class="form-group">
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="{{ 'login.email' | translate }}"
+            required
+            [(ngModel)]="email"
+          />
+          <input
+            type="password"
+            id="password"
+            name="password"
+            placeholder="{{ 'login.password' | translate }}"
+            required
+            [(ngModel)]="password"
+          />
+        </div>
+          <button type="submit" [disabled]="loginForm.invalid">Login</button>
+      </form>
+    </div>
+    <div class="dialog-footer">
+      <a href="#" (click)="switchToForgot()">{{
+        "login.goTOForgotPassword" | translate
+      }}</a>
+      <span
+        >{{ "login.notYou" | translate }}
+        <a href="#" (click)="switchToRegister()">{{
+          "login.goToRegister" | translate
+        }}</a></span
+      >
+    </div>
+  </div>
+</div>
