--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -102,12 +102,13 @@
 </div>
 
 <app-wish-list-modal
-  *ngIf="show"
-  [propertyId]="selectedPropertyId"
-  (close)="show = false"
-  [show]="show"
-  [userId]="'2'"
-  class="col-12"
+    *ngIf="show"
+    [propertyId]="selectedPropertyId"
+    (close)="onClose()"
+    (finish)="onFinish($event)"
+    [show]="show"
+    [userId]="'2'"
+    class="col-12"
 >
 </app-wish-list-modal>
 
