--- a/src/app/components/wish-list-modal/wish-list-modal.html
+++ b/src/app/components/wish-list-modal/wish-list-modal.html
@@ -1,83 +1,78 @@
 <app-modal
-    class="wishlists-modal col-12"
-    (close)="onClose()" 
-    [title]="'Wishlists'"
-    [isVisible]="show"
-    [modalClass]="'col-12'"
-    [modalDialogClass]="' mx-auto col-12  vh-min-100 p-0'"
-    [modalContentClass]="'mx-auto col-12  rounded-5 p-0 border-0 p-3 vh-max-85 vh-min-40 overflow-y-auto'"
-    
-    >
-    <app-loader 
-        [containerClass]="'vh-min-40'"
-        *ngIf="isLoading"
-        [showText]="true"
-        >
-    </app-loader>
-    
-    
-    <div 
-        class="h-100 d-flex justify-content-center align-items-center"
-        *ngIf="!isLoading && lists.length==0">
-        <div class="empty-content">
-            <div class="empty-icon">💝</div>
-            <h3>No wishlists yet</h3>
-            <p>
-              Create your first wishlist to start saving your favorite properties
-            </p>
-            <!-- <button class="create-btn">Create Wishlist</button> -->
-          </div>
-      </div>
-    
-    <div *ngIf="!isLoading" class="row row-cols-1 row-cols-sm-2 pt-3 m-0 g-0   ">
-        @for(item of lists; track $index){
-            
-              <div class="mb-3">
-                  <div class="col-12">
-                    <button 
-                      class="text-left"
-                      (click)="onWishListClicik(item.id)">
-                      
-                        <img class="wishlist-image rounded-4 " 
-                          src="https://a0.muscache.com/im/pictures/hosting/Hosting-1336611026974467386/original/63677619-b824-43ff-a5d3-f3d74275f29f.jpeg?im_w=720"
-                          alt="">
-                        <p class="my-0 ms-1 mt-1 fw-bold small">{{item.name}}</p>
-                        <p class="secondary-text small  ms-1 my-0">{{item.propertyIds.length}} saved</p>
-                    </button>
-                  </div>
-                        
-              </div>
-            
-          }
-      </div>
-      
-    
-    <div class="modal-footer">
-        <button class="btn btn-primary bg-black  primary-text text-light me-auto"
-        (click)="showNewModal()"
-        >Create new wishlist</button>
-      </div>
-    
-    
+  class="wishlists-modal col-12"
+  (close)="onClose()"
+  [title]="'Wishlists'"
+  [isVisible]="show"
+  [modalClass]="'col-12'"
+  [modalDialogClass]="' mx-auto col-12  vh-min-100 p-0'"
+  [modalContentClass]="'mx-auto col-12  rounded-5 p-0 border-0 p-3 vh-max-85 vh-min-40 overflow-y-auto'"
+>
+  <app-loader
+    [containerClass]="'vh-min-40'"
+    *ngIf="isLoading"
+    [showText]="true"
+  >
+  </app-loader>
 
+  <div
+    class="h-100 d-flex justify-content-center align-items-center"
+    *ngIf="!isLoading && lists.length==0"
+  >
+    <div class="empty-content">
+      <div class="empty-icon">💝</div>
+      <h3>No wishlists yet</h3>
+      <p>
+        Create your first wishlist to start saving your favorite properties
+      </p>
+      <!-- <button class="create-btn">Create Wishlist</button> -->
+    </div>
+  </div>
+
+  <div *ngIf="!isLoading" class="row row-cols-1 row-cols-sm-2 pt-3 m-0 g-0">
+    @for(item of lists; track $index){
+
+    <div class="mb-3">
+      <div class="col-12">
+        <button class="text-left" (click)="onWishListClicik(item.id)">
+          <img
+            class="wishlist-image rounded-4"
+            [src]="getPropertyImage(item.coverImageUrl)"
+            alt=""
+          />
+          <p class="my-0 ms-1 mt-1 fw-bold small">{{item.name}}</p>
+          <p class="secondary-text small ms-1 my-0">
+            {{item.propertyIds.length}} saved
+          </p>
+        </button>
+      </div>
+    </div>
+
+    }
+  </div>
+
+  <div class="modal-footer">
+    <button
+      class="btn btn-primary bg-black primary-text text-light me-auto"
+      (click)="showNewModal()"
+    >
+      Create new wishlist
+    </button>
+  </div>
 </app-modal>
 
 <app-modal
-    [title]="'New Withlist'"
-    *ngIf="isNewModalVisible"
-
-    (close)="onNewModalClose()"
-  
-    [modalClass]="'col-12'"
-    [modalDialogClass]="' col-12  vh-min-100 p-0'"
-    [modalContentClass]="'mx-auto col-12  rounded-5 p-0 border-0 p-3 vh-max-85'"
+  [title]="'New Withlist'"
+  *ngIf="isNewModalVisible"
+  (close)="onNewModalClose()"
+  [modalClass]="'col-12'"
+  [modalDialogClass]="' col-12  vh-min-100 p-0'"
+  [modalContentClass]="'mx-auto col-12  rounded-5 p-0 border-0 p-3 vh-max-85'"
 >
-    <form 
-      [formGroup]="form" 
-      (ngSubmit)="onCreateNewWishlist()"
-      class="text-start"  
-    >
-
+  <form
+    [formGroup]="form"
+    (ngSubmit)="onCreateNewWishlist()"
+    class="text-start"
+  >
     <div class="mb-3">
       <label for="name" class="form-label">Name</label>
       <input
@@ -117,15 +112,16 @@
       >
         Note is required.
       </div>
-    </div>  
+    </div>
   </form>
   <div class="modal-footer d-flex justify-content-start">
     <button
-        type="submit"
-        class="btn btn-primary mb-3" 
-        (click)="onCreateNewWishlist()"
-        [disabled]="form.invalid">Submit
+      type="submit"
+      class="btn btn-primary mb-3"
+      (click)="onCreateNewWishlist()"
+      [disabled]="form.invalid"
+    >
+      Submit
     </button>
   </div>
-  
 </app-modal>
