--- a/src/app/pages/wishlist/wishlist.css
+++ b/src/app/pages/wishlist/wishlist.css
@@ -298,7 +298,7 @@
   display: flex !important;
   justify-content: space-between !important;
   align-items: center !important;
-  gap: 15rem;
+  /* gap: 15rem; */
   /* border-top: 1px solid #ccc; */
   /* padding-top: 0.7rem; */
 }
@@ -322,6 +322,11 @@
   padding: 8px 16px;
   cursor: pointer;
   border-radius: 6px;
+
+  background-color: #ccc;
+  color: #333;
+
+
 }
 .cancel:hover {
   background-color: #f2f2f2;
