--- a/src/app/pages/update-list/update-list.html
+++ b/src/app/pages/update-list/update-list.html
@@ -66,58 +66,119 @@
         </div>
 
         <!-- Main Content Area -->
-        <div class="col-12 col-lg-8 col-xl-9">
-          <div class="content-area">
-            <div class="content-wrapper">
-              <form [formGroup]="propertyForm">
-                
-                <!-- Photos Section -->
-                <div *ngIf="activeSection === 'photos'" class="section-content">
-                  <div class="section-header">
-                    <h2>Add some photos of your house</h2>
-                    <p>You'll need 5 photos to get started. You can add more or make changes later.</p>
-                  </div>
-                  
-                  <div class="photos-grid">
-                    <div class="photo-item" *ngFor="let photo of propertyForm.get('photos')?.value; let i = index">
-                      <div class="photo-wrapper">
-                        <img [src]="photo" [alt]="'Property photo ' + (i + 1)" class="photo-image">
-                        <button type="button" class="photo-remove-btn" (click)="onPhotoRemove(i)">
-                          <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                            <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
-                          </svg>
-                        </button>
-                      </div>
-                    </div>
-                    
-                    <!-- Add Photo Button -->
-                    <div class="photo-item">
-                      <div class="add-photo-btn" (click)="photoInput.click()">
-                        <div class="add-photo-content">
-                          <svg width="32" height="32" fill="currentColor" viewBox="0 0 16 16">
-                            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                          </svg>
-                          <span>Add photos</span>
-                        </div>
-                      </div>
-                      <input type="file" #photoInput (change)="onPhotoAdd($event)" accept="image/*" multiple class="d-none">
-                    </div>
-                  </div>
+<div class="col-12 col-lg-8 col-xl-9">
+  <div class="content-area">
+    <div class="content-wrapper">
+      <form [formGroup]="propertyForm">
+        
+        <!-- Photos Section -->
+        <div *ngIf="activeSection === 'photos'" class="section-content">
+          <div class="section-header">
+            <h2>Add some photos of your house</h2>
+            <p>You'll need 5 photos to get started. You can add more or make changes later.</p>
+          </div>
+          
+          <!-- Upload Status -->
+          <div *ngIf="uploading" class="upload-status">
+            <div class="upload-progress">
+              <div class="progress-bar">
+                <div class="progress-fill" [style.width.%]="uploadProgress"></div>
+              </div>
+              <span class="progress-text">Uploading... {{uploadProgress}}%</span>
+            </div>
+          </div>
+          
+          <div class="photos-grid">
+            <!-- Existing Photos -->
+            <div class="photo-item" *ngFor="let photo of propertyForm.get('photos')?.value; let i = index">
+              <div class="photo-wrapper">
+                <img [src]="photo" [alt]="'Property photo ' + (i + 1)" class="photo-image">
+                <button type="button" class="photo-remove-btn" (click)="onPhotoRemove(i)">
+                  <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                    <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
+                  </svg>
+                </button>
+              </div>
+            </div>
 
-                  <!-- Save Section for Photos -->
-                  <div class="content-save-section">
-                    <button
-                      type="button"
-                      class="save-btn-content"
-                      [class]="getSaveButtonClass()"
-                      [disabled]="!hasChangesInActiveSection() || isSavingActiveSection()"
-                      (click)="onSaveCurrentSection()">
-                      <span *ngIf="isSavingActiveSection()" class="spinner"></span>
-                      <span *ngIf="!isSavingActiveSection()">{{ getSaveButtonText() }}</span>
-                    </button>
-                  </div>
+            <!-- Preview Selected Files (before upload) -->
+            <div class="photo-item" *ngFor="let file of selectedFiles; let i = index">
+              <div class="photo-wrapper preview-photo">
+                <img [src]="getPreviewUrl(file)" [alt]="'Preview ' + (i + 1)" class="photo-image">
+                <button type="button" class="photo-remove-btn" (click)="removeSelectedFile(i)">
+                  <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                    <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
+                  </svg>
+                </button>
+                <div class="preview-badge">Preview</div>
+              </div>
+            </div>
+            
+            <!-- Add Photo Button -->
+            <div class="photo-item">
+              <div class="add-photo-btn" (click)="photoInput.click()">
+                <div class="add-photo-content">
+                  <svg width="32" height="32" fill="currentColor" viewBox="0 0 16 16">
+                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                  </svg>
+                  <span>Add photos</span>
+                  <small *ngIf="selectedFiles.length > 0">({{selectedFiles.length}} selected)</small>
                 </div>
+              </div>
+              <input 
+                type="file" 
+                #photoInput 
+                (change)="onFilesSelected($event)" 
+                accept="image/*" 
+                multiple 
+                class="d-none">
+            </div>
+          </div>
+
+          <!-- Upload Selected Files Button -->
+          <div *ngIf="selectedFiles.length > 0" class="upload-section">
+            <button
+              type="button"
+              class="upload-selected-btn"
+              [disabled]="uploading"
+              (click)="uploadSelectedPhotos()">
+              <span *ngIf="uploading" class="spinner"></span>
+              <span *ngIf="!uploading">Upload {{selectedFiles.length}} Photo{{selectedFiles.length > 1 ? 's' : ''}}</span>
+            </button>
+            <button
+              type="button"
+              class="clear-selected-btn"
+              [disabled]="uploading"
+              (click)="clearSelectedFiles()">
+              Clear Selection
+            </button>
+          </div>
+
+          <!-- Photo Requirements -->
+          <div class="photo-requirements" *ngIf="getTotalPhotoCount() < 5">
+            <div class="requirement-item">
+              <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+              </svg>
+              <span>You need {{5 - getTotalPhotoCount()}} more photo{{5 - getTotalPhotoCount() > 1 ? 's' : ''}} to continue</span>
+            </div>
+          </div>
+
+          <!-- Save Section for Photos -->
+          <div class="content-save-section">
+            <button
+              type="button"
+              class="save-btn-content"
+              [class]="getSaveButtonClass()"
+              [disabled]="!hasChangesInActiveSection() || isSavingActiveSection() || getTotalPhotoCount() < 5"
+              (click)="onSaveCurrentSection()">
+              <span *ngIf="isSavingActiveSection()" class="spinner"></span>
+              <span *ngIf="!isSavingActiveSection()">{{ getSaveButtonText() }}</span>
+            </button>
+          </div>
+        </div>
 
                 <!-- Title Section -->
                 <div *ngIf="activeSection === 'title'" class="section-content">
