--- a/src/app/pages/wishlist/wishlist.html
+++ b/src/app/pages/wishlist/wishlist.html
@@ -99,8 +99,8 @@
     title="Delete this wishlist?"
     *ngIf="showModal"
     (close)="cancelDelete()"
-    [modalDialogClass]="'mx-auto rounded-4'"
-    [modalContentClass]="'col-12 rounded-5'"
+    [modalDialogClass]="'mx-auto rounded-4 vh-min-100'"
+    [modalContentClass]="'col-12 rounded-5 vh-min-30 p-3'"
   >
     <ng-content>
       <p class="px-4" style="min-width: max-content;">
@@ -109,10 +109,9 @@
     </ng-content>
 
     <div
-      modalFooter
-      class="modal-actions d-flex justify-content-between align-items-center"
+      class="modal-footer modal-actions d-flex justify-content-between align-items-center p-t"
     >
-      <button class="cancel" (click)="cancelDelete()">Cancel</button>
+      <button class="cancel " (click)="cancelDelete()">Cancel</button>
       <button class="delete-confirm" (click)="deleteSelectedWishlist()">
         Delete
       </button>
