--- a/src/app/pages/login/login.css
+++ b/src/app/pages/login/login.css
@@ -18,18 +18,26 @@
 .dialog-header {
   border-bottom: 1px solid var(--primary-text-color);
   padding: 10px;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+  position: relative;
 }
+
 .dialog-header span {
   text-align: center;
   font-size: 1.2rem;
   font-weight: 700;
-  width: 94%;
-  display: inline-block;
+  grid-column: 2;
 }
+
 .icon-close {
   cursor: pointer;
   font-size: 1.5rem;
+  justify-self: end;
+  grid-column: 3;
 }
+
 .last-info {
   padding: 20px;
   display: flex;
@@ -67,18 +75,34 @@
   width: 100%;
   padding: 10px;
   font-size: 1.2rem;
+  color: black;
 }
-.dialog-content form input:first-child {
+.dialog-content form .email input {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  border: 1px solid black;
 }
-.dialog-content form input:last-child {
+.dialog-content form .pass {
+  position: relative;
+}
+.dialog-content form .pass a {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 10px;
+  color: black;
+  text-decoration: underline;
+}
+.dialog-content form .pass input {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  border: 1px solid black;
+  border-top: 0;
 }
 .dialog-content form button {
   width: 100%;
   padding: 10px;
+  margin-top: 10px;
   border-radius: 5px;
   font-size: 1.2rem;
   color: white;
@@ -88,9 +112,11 @@
 
 .dialog-footer {
   padding: 0 20px 20px;
+  margin-bottom: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 10px;
 }
 .dialog-footer a {
   text-decoration: underline;
