--- a/src/app/pages/wishlist-properties/wishlist-properties.html
+++ b/src/app/pages/wishlist-properties/wishlist-properties.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-4">
   <div
     *ngIf="!isLoading && properties.length > 0"
     class="d-flex align-items-center gap-4 mb-4"
