--- a/src/app/pages/wishlist/wishlist.html
+++ b/src/app/pages/wishlist/wishlist.html
@@ -1,4 +1,4 @@
-<div class="wishlists-container container">
+<div class="wishlists-container container mt-4">
   <div class="header">
     <h1 class="title">Wishlists</h1>
   </div>
