--- a/src/app/components/messages-box/messages-box.css
+++ b/src/app/components/messages-box/messages-box.css
@@ -128,3 +128,83 @@
   color: #ff4757;
   font-size: 16px;
 }
+
+
+
+
+
+.search-bar-container {
+  background: #f5f5f5;
+  border-radius: 999px;
+  padding: 6px 12px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  overflow: hidden;
+  position: relative;
+  width: 0;
+  opacity: 0;
+  margin-bottom: 8px;
+}
+
+.search-bar-container.active {
+  animation: openFromRight 0.3s forwards;
+  -webkit-animation: openFromRight 0.3s forwards;
+}
+
+.search-bar-container.animate-close {
+  animation: closeToRight 0.3s forwards;
+}
+
+.search-input {
+  border: none;
+  outline: none;
+  background: transparent;
+  flex: 1;
+  font-size: 14px;
+}
+
+.search-icon {
+  font-size: 16px;
+  color: #333;
+}
+
+.icon-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.cancel-btn {
+  font-weight: 500;
+  font-size: 14px;
+  color: black;
+  text-decoration: none;
+}
+
+
+@keyframes openFromRight {
+  0% {
+    width: 0;
+    opacity: 0;
+    transform: translateX(30px);
+  }
+  100% {
+    width: 250px;
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes closeToRight {
+  0% {
+    width: 250px;
+    opacity: 1;
+    transform: translateX(0);
+  }
+  100% {
+    width: 0;
+    opacity: 0;
+    transform: translateX(30px);
+  }
+}
