--- a/src/app/components/reservation-box/reservation-box.css
+++ b/src/app/components/reservation-box/reservation-box.css
@@ -71,7 +71,8 @@
   width: 100%;
   height: 200px;
   object-fit: cover;
-  border-radius: 12px;
+  /* border-radius: 12px; */
+
 }
 
 .status-overlay {
