--- a/src/app/components/mainswiper/mainswiper.html
+++ b/src/app/components/mainswiper/mainswiper.html
@@ -60,6 +60,8 @@
         [price]="property.pricePerNight"
         description="{{property.description}}"
         [rating]="property.averageRating"
+        [isFavorite]="property.isFavourite"
+        [reviewCount]="property.reviewCount"
       ></app-slider-card>
     </swiper-slide>
   </swiper-container>
